<resources>
    <string name="app_name">Welgain</string>
    <string name="rules_title">トヨタウェルライフセンター\nおうちでWelgain　利用約款</string>
    <string name="rules_text">第１条（適用範囲）\nトヨタウェルライフセンター利用約款（以下「本約款」といいます。）は、トヨタ自動車株式会社（以下「当社」といいます。）が管理・運営するトヨタウェルライフセンター（以下「本センター」といいます。）が提供するリモート運動支援サービス「おうちでWelgain」を利用する方（以下「利用者」といいます。）が第２条に定める本サービスを利用する際の一切の行為及び当社から利用者に提供される電子メールやアプリケーション等で発信する情報に適用されます。\n\n第２条（目的）\n本約款は、当社が利用者の身体状況に合わせて、より広い社会参加やより自立した生活を実現することを目的として運動学習に基づき機能練習やカウンセリング担当者によるカウンセリングサービス（以下あわせて「本サービス」といいます。）を提供するにあたって、その注意事項及び利用者が遵守すべき事項を定めることを目的とします。\n\n第３条（利用資格）\n本サービスの利用資格者は、以下の項目すべてを満たす方といたします。\n(１)	本約款に同意した方。\n(２)	医師等医療関係者からリハビリその他これに付随する行為を禁止されていない方。\n(３)	反社会的勢力（暴力団、暴力関係企業、総会屋等）の関係者ではない方。\n(４)	過去に本センターにおいて除名の通告を受けていない方。\n(５)	その他、当社が本サービスを利用するにあたり適切であると認める方。\n\n第４条（利用手続き）\n1.	利用資格者は、本サービスを利用しようとするときは、本約款に同意したうえで利用を申込み、当社がそれを承諾することにより、当該利用資格者と当社の間で本サービスの利用契約が成立し、その時をもって当該利用資格者は利用者となります。\n2.	利用者は、利用申し込みの際に登録した内容に変更があった場合、当社が別途定める方法により速やかに登録内容を変更するものとします。当社は、利用者が当該変更を遅滞したことにより被った損害等について一切の責任を負いません。\n\n第５条（未成年者等）\n未成年者及び介助を要する方（意思能力が十分ではないと当社が判断する方を含みます。）が本サービスの利用を申し込む場合は、以下を遵守しなければなりません。\n（１）未成年者は、親権者等の法定代理人の同意を得て利用申込書に署名のうえで、本サービスの利用を申し込みます。\n（２）介助を要する方のうち、意思能力が十分であるものの手指の麻痺等で署名が困難な方は、ご家族等の代理人が利用申込書に利用者氏名及び代理人氏名を署名のうえで、本サービスの利用を申し込みます。\n（３）介助を要する方のうち、意思能力が十分ではないと当社が判断する方は、ご家族等当社が相当と認める方が利用申込書にご署名のうえで、本サービスの利用を申し込みます。この場合、当該ご家族等は、自らの利用資格の有無に関わらず、本約款に基づく利用者の義務及び責任を利用者本人と連帯して負ったうえで、本約款に基づく利用者の義務及び責任と同等の義務を負うものとします。\n\n第６条（利用登録の不承諾）\n当社は、次の各号にいずれかに該当する場合は、当社の判断によって、第４条に基づく利用申し込みを承諾しないことがあります。\n(１)	第３条の利用資格を満たさない場合\n(２)	利用資格者が、過去に本約款またはトヨタウェルライフセンター利用約款に違反したことを理由として、アカウントの一時停止、利用取消処分、もしくは利用申し込みの不承諾を受けている、または過去に受けたことがある場合\n(３)	利用申し込みの申告事項に、虚偽、誤記、または記入漏れがあった場合\n(４)	利用申し込みの際に決済手段として利用資格者が届け出たクレジットカードが、クレジットカード会社により無効扱いとされている場合、または当社の指定する決済関係先が当該利用資格者との契約の締結を拒否した場合\n(５)	同一人物により複数のアカウントが登録されたおそれのある場合\n(６)	本サービスを利用するために必要な安定したネットワーク環境を用意できない場合\n(７)	その他当社が不適切と判断した場合\n\n第７条（個人情報保護）\n当社は、別途定める「トヨタウェルライフセンター個人情報保護方針」及び個人情報保護法その他関連法令に従い、利用者の個人情報を適切に取り扱います。\n\n第８条（利用料金）\n1.	利用者は、当社が別途定める期日までに、当社が指定する方法で利用料金を支払わなければなりません。\n2.	お支払いいただいた利用料金は、本サービスの利用の有無に関わらず、また、事由の如何を問わず原則として返還できません。ただし、第26条但書きに基づき本サービスの利用を停止または解除した場合はこの限りではありません。\n\n第９条（利用者資格の相続・譲渡）\n利用者は、本サービスの利用者資格を他の方に譲渡、売買貸与、名義変更、質権及び譲渡担保権の設定その他一切の処分をすることができません。また、本サービスの利用者資格は、相続その他の包括承継の対象にはなりません。ただし、法人の合併、会社分割その他組織再編行為に基づく承継はこの限りではありません。\n\n第10条（本約款等の遵守）\n利用者は、本サービスの利用にあたり、本約款を遵守するとともに本センターの運動学専門家や運動指導トレーナー、カウンセラー等のスタッフ（以下あわせて「スタッフ等」といいます）の指示に従わなければなりません。\n\n第11条（サービスに関する注意事項）\n当社は、本サービスが、利用者の特定の目的に適合すること及び期待される有効性や安全性等を有することを保証するものではありません。\n\n第12条（体調管理に関する注意事項）\n本サービスの利用は、利用者ご自身の責任と判断のもとに行ってください。利用者は、体調がすぐれない、身体に痛みを感じる等運動機能練習の実施に不安を感じる場合は、スタッフ等に相談したり、速やかに医師等または医療機関にご相談ください。\n\n第13条（緊急時の対応）\n1.	当社は、利用者の身体状況に応じて、医療機関での診療を推奨することがあります。\n2.	前項に定めるほか、本サービス利用中に利用者の心身の状態等が急変するなど当社が必要と判断した場合、当社は、利用者（介助を要する方のうち、意思能力が十分ではない方はそのご家族等当社が相当と認める方）が指定する者に対し、連絡することがあります。\n\n第14条（利用者の責任）\n1.	利用者は、利用者自身の責任において本サービスを利用するものとし、本サービスを利用してなされた一切の行為及びその結果について一切の責任を負います。\n2.	利用者が、本センター及び本サービスに関連してSNS等に投稿した情報（以下「投稿情報」といいます。）に関する一切の責任は利用者が負います。当社は、投稿情報について一切責任を負いません。\n3.	利用者が投稿情報により他人の名誉を毀損した場合、プライバシー権を侵害した場合、許諾なく第三者の個人情報を開示した場合、著作権法に違反する行為を行った場合その他他人の権利を侵害した場合には、当該利用者は自身の責任と費用においてこれを解決しなければならず、当社は一切の責任を負いません。\n4.	利用者は、投稿情報について当社に保存義務がないことを認識し、必要な情報については適宜バックアップをとるものとします。\n\n第15条（アカウントの保有）\n1.	当社は、利用者1人につき1つのアカウントを付与します。アカウントは、本サイト及び本アプリにログインするための権利であり、利用者１人が複数のアカウントを保有すること、複数人の利用者が1つのアカウントを共同して保有することはできません。ただし、当社が書面により別途に認めた場合を除きます。\n2.	利用者はいかなる場合においても、アカウントを第三者に譲渡、貸与、売買、名義変更、質権の設定、その他担保に供する行為はできません。\n\n第16条（禁止事項）\n1.	利用者は、次の行為をしてはならないものとします。当社は、利用者が次の各号に掲げる行為を行った場合には、第27条に基づく除名となることがあるほか、本サービスの全部もしくは一部の利用停止、投稿情報の全部もしくは一部の削除、又は公開範囲の変更等利用者にとって不利益な措置を講じることがあります。\n(１)	他の利用者やスタッフ等を誹謗、中傷する行為。\n(２)	他の利用者やスタッフ等に対し、暴力をふるいその他有形力を行使する一切の行為。\n(３)	他の利用者やスタッフ等に関する個人情報等を収集又は蓄積する行為。\n(４)	他の利用者に成りすます行為。\n(５)	大声や奇声を発する又は物を投げる、壊す、叩くなど、スタッフ等及び他の利用者に対する威嚇的行為ないし迷惑行為。\n(６)	本センター内の設備・器具・備品等を損壊し、又は備品等を許可なく所定の場所以外に持ち出す行為。\n(７)	電子メールの送受信を含め、オンライン、オフラインを問わず他の利用者やスタッフ等を待ち伏せたり、後をつけたり、みだりに話しかける等の迷惑行為。\n(８)	他の利用者やスタッフ等に対し、多数回にわたって電話をする、メール、ＳＮＳ、ブログその他の手段によって執拗に連絡する、言及するなどの迷惑行為。\n(９)	必要性がないにもかかわらず、スタッフ等に対し、長時間にわたり面談、電話、その他の方法で拘束する等の迷惑行為。\n(１０)	他の利用者やスタッフ等に対するセクシャル・ハラスメント（性的いやがらせ）\n(１１)	刃物、火器、薬品などの危険物を本センター内へ持ち込む行為。\n(１２)	他の利用者又はスタッフ等に対し、物品販売や営業行為を行うこと、又は金銭の拝受・賃貸を申し入れるなどの迷惑行為。\n(１３)	他の利用者やスタッフ等に対して宗教的活動その他への勧誘行為、及び政治活動、署名活動等を行うこと。\n(１４)	スタッフ等に対する、当社以外の他社への就職のあっせん引き抜きの行為。\n(１５)	当社のサーバーに不正に侵入したり、当社のサーバーまたはネットワークの機能や情報を破壊したり、本サービスの運営を妨害したりする行為。\n(１６)	本サービス運営を妨害するおそれのある行為。\n(１７)	本サービスの内容、画像、動画もしくは音声およびスタッフからのアドバイスやカウンセリング等を当社に無断で転載、複製、修正、蓄積、転送、公開、アップロードする行為、又はそのおそれがある行為。\n(１８)	アカウントを第三者に譲渡、貸与等すること又は第三者に使用させる行為。\n(１９)	カウンセリングに予約した利用者以外の、当社が許可していない者を参加させる行為\n(２０)	本サービスの内容と関係のないコメントまたは本項各号に違反する内容のコメントをSNS等に投稿する行為。\n(２１)	本サービスに関連して、反社会的勢力に対して直接又は間接に利益を供与する行為\n(２２)	本アプリの複製物を再配布する行為。\n(２３)	事実に反する情報を送信、掲載する行為。\n(２４)	軽犯罪法、個人情報保護法等の法令や公序良俗に反する一切の行為。\n(２５)	その他、当社が不適切と判断する行為。\n2.	前項各号の禁止行為に該当するか否かは、当社の裁量により判断されるものとします。なお、当該判断について当社は説明責任を負うものではありません。\n3.	当社は、前項の判断に起因して利用者が損害または不利益等を被った場合、当社に重大な過失がある場合を除いて、一切責任を負いません。\n4.	利用者は、本条第１項に違反する行為に起因して当社または第三者に損害が生じた場合、本サービスの利用者身分を喪失した後であったとしても、すべて責任を負うものとします。\n5.	利用者が前項に定める行為を行った場合で当社が何等かの損害を被った場合には、損害賠償その他の法的措置をとるものとします。\n\n第17条（著作権）\n本サービスに関して当社が提供する映像、画像、音声、商標、ロゴマーク、記録等に係る商標権、知的財産権（著作権法第27条および第28条に定める権利を含みますがこれらに限りません）、所有権、その他の権利（以下「著作権等」といいます）は、すべて当社または権利者に帰属します。利用者は、著作権等を当社または権利者に無断で使用・利用することはできません。\n\n第18条（情報の使用許諾等）\n1.	利用者は、自己の投稿情報を当社が非独占的に使用する(複製、公開、送信、頒布、譲渡、貸与、翻訳、翻案を含む)権利を許諾したものとみなします。利用者は、著作者人格権を行使しないものとします。\n2.	当社は、投稿情報を、本サービスの円滑な提供や当社システムの構築、改良、メンテナンスに必要な範囲内で使用することができるものとします。\n3.	前項に基づき投稿情報を使用するにあたっては、当社は、投稿情報の一部又は氏名表示を省略することができるものとします。\n\n第19条（削除権限）\n当社は、利用者の投稿情報の違法性・本約款の違反の有無に関わらず、当社が不適切と判断した投稿情報について、利用者の承諾を得ることなく、その全部もしくは一部の削除又は公開範囲の変更等を行うことができるものとします。\n\n第20条（免責事項）\n当社は、利用者が本センターの利用中及び本サービスの利用中に被ったけがやその他の事故（以下、あわせて「事故等」といいます。）について、当社に故意又は重過失がある場合を除き、当該事故等に対する一切の責任を負いません。また、利用者が本センター利用中に被った金銭、貴金属その他の物品等の紛失、盗難、及び、本センター外での事故等についても、当社は一切の責任を負いません。\n\n第21条（利用者の損害賠償責任）\n利用者が本サービスの利用に関連して当社または第三者に損害を与えたときは、利用者は、当社に対して一切迷惑をかけないものとし、当該損害（弁護士費用等対応にかかった費用も含む）について自己の費用と責任において対処しなければなりません。\n\n第22条（利用者資格喪失）\n利用者は次の各号の一に該当する場合、その利用者資格を喪失し、利用者としていかなる権利をも喪失します。\n(１)	第８条に基づく利用料金の支払い日から３か月が経過したとき。\n(２)	第26条但書きに基づき本サービスの利用を停止または解除したとき。\n(３)	第27条により除名されたとき。\n(４)	利用者が死亡したとき。\n(５)	当社が本サービスの提供を終了したとき。\n\n第23条（カウンセリングルームの予約）\n1.	本サービスのうち、カウンセリングルームの利用は、当社が本サービスの一部を提供するスマートフォン・非PC端末向けアプリケーション（以下「本アプリ」といいます）から利用者自身が予約を行う、または本センターでのカウンセリングの際に利用者がスタッフ等に申し出ることにより予約を行うものとします。\n2.	カウンセリングルームの利用は、本アプリで予約確定が反映された時点またはスタッフ等により予約管理システムへの入力が完了した時点で成立するものとします。\n3.	利用者は、予約が確定したカウンセリングを変更、キャンセルしたい場合は、原則として前日の18時までに本アプリ上または本センターへの電話にて変更またはキャンセルを行うものとします。\n\n第24条（カウンセリングルームの利用）\n1.	利用者が、カウンセリング開始予定時刻から15分経過するまでに、当社または当該カウンセリングの担当者（以下、「カウンセラー」といいます）からの問いかけに応答しない等カウンセリングを開始することができない場合、当社は、利用者がカウンセリングを欠席したものとみなし、当該カウンセリングを終了することができるものとします。\n2.	当社は、利用者がカウンセリングの無断欠席を繰り返し行った場合、当該利用者に対して警告、改善指示等を行うことができるものとします。\n3.	当社は、理由の如何にかかわらず、利用者の都合によるカウンセリングの欠席による補填、補償等は一切行いません。\n\n第25条（情報の保管）\n当社は、本サービスの適切な運営を目的とし、利用者による本サービス内での発言、会話、問い合わせ内容等を録音または記録し、必要と判断した場合には画像または映像を収集し保管します。これらの情報は、当社が本サービスの適正な運営に必要であると判断した場合にのみ、最小限の範囲で利用することがあります。利用者は、当社がこれらの情報を保管し、利用することに同意するものとします。\n\n第26条（利用停止）\n利用者は、本約款第４条に基づき利用者となった以降は、自己都合により本サービスの利用を停止することはできません。但し、消費者契約法、割賦販売法その他の法令に基づき本サービスの利用を停止・解除するときは、この限りではありません。また、当社がやむを得ないと判断した事由により利用者が本サービスを利用できなくなった場合、本センターを利用できなくなった時点での残日数に限り契約開始日から最長１年間有効といたします。\n\n第27条（除名）\n1.	当社は、利用者が次の各号の一に該当するときは、当社の判断により、当該利用者を本サービスの利用者から除名することができます。\n(１)	本約款に違反し、その是正を催告されたにもかかわらず是正しないとき。\n(２)	利用料金の支払を怠ったとき。\n(３)	当社の許可なく、直接スタッフ等から本サービス外でトレーニング等を受けたとき。 \n(４)	スタッフ等が利用者と連絡が取れなくなった場合\n(５)	第３条に定める利用資格を満たさない者であることが判明したとき\n(６)	第16条各号に定める禁止事項を行ったとき。\n(７)	その他当社が利用者としてふさわしくないと認めたとき。\n2.	除名された利用者は、除名以降本センターおよび本サービスの利用が一切できません。また、除名時点で既にお支払いいただいた利用料金がある場合、当社は理由の如何を問わず一切返還いたしません。\n\n第28条(本サービスの一時的な中断) \n1.	当社は、次の各号に該当するときは、本サービスの全部またはー部を中断、休業したり、または本センターの解散（以下「閉鎖等」といいます。）をすることができます。 \n(１)気象災害その他外因的事由により、本サービスの提供が困難だと当社が判断したとき。 \n(２)本サービスに用いる設備やプログラムなどの修繕または点検を実施するとき。 \n(３)事業譲渡その他本サービスの運営事業の承継、本サービスの運営事業の撤退その他重大な事由により、本サービスの中断・休業・停止等がやむを得ないとき。 \n(４)その他、当社が本サービスの一時的な中断が必要と判断した場合\n2.	当社は、閉鎖等が予定されている場合は、原則として1ヶ月前までに利用者に対しその旨を告知します。但し、閉鎖等により利用者の会費支払義務が減免されることはなく、また、当社は利用者に対して特別の補償または賠償を一切行いません。\n3.	閉鎖等が、当社の責めによる場合には、当社は利用者に対し、代替サービスを提供するものとします。\n\n第29条(利用の禁止) \n利用者が次の各号に該当するときは、当社は、一時的に当該利用者に対し本サービスの利用を禁止することができるものとします。 \n(１)本約款に違反したとき。 \n(２)その他、本サービスの利用にふさわしくないと認められるとき。\n \n第30条 (利用の一部制限) \n利用者が次の各号に該当するときは、当社は、当該利用者に対し本サービスの利用をー部制限することがあります。 \n(１)利用者の飲酒酩酊等により、安全に本サービスを利用することができないと当社が判断したとき。 \n(２)発熱等により、利用者本人が本サービスを適切に実施できないおそれがあるとき。  \n(３)本サービスの事前の問診および検査（脈拍・血圧等）により、安全に本サービスを実施することができないとスタッフ等が判断したとき。 \n(４)その他、本サービスを正常に利用できないと当社が判断したとき。 \n\n第31条（利用環境の整備）\n1.	利用者は、本サービスを利用するために必要なあらゆる機器、ソフトウェア、通信手段を自己の責任と費用において、適切に整備するものとし、安定したネットワーク環境を用意するものとします。\n2.	利用者は自己の利用環境に応じて、コンピューター・ウィルスの感染の防止、不正アクセス及び情報漏洩の防止等のセキュリティ対策を講じるものとします。\n3.	利用者は、本サービスを安全かつ適切に実施できる場所を自己の責任と費用において用意するものとします。\n4.	当社は、利用者の利用環境について一切関与せず、また一切の責任を負いません。\n\n第32条（登録メールアドレス及びパスワードの管理）\n1.	利用者は、自己の管理に属する使用可能なメールアドレスを登録メールアドレスとして登録しなければならず、当該登録メールアドレスが自己の管理に属さなくなったときには、自己の管理に属する使用可能な別のメールアドレスに変更しなければならないものとします。\n2.	利用者は、自己の登録メールアドレス及びパスワードの不正利用の防止に努めるとともに、その管理について一切の責任を持つものとします。\n3.	当社は、利用者の登録メールアドレスやパスワードが第三者に利用されたことによって生じた損害等につきましては、いかなる責任も負いません。\n\n第33条 (利用料金の変更等) \n1.	当社は、当社が相当な理由があると認めるときは利用料金を変更することができます。 \n2.	当社は、本サービスの運営システムの変更が必要と判断したときは、適宜変更することができます。 \n3.	前二項の場合、当社は原則として各変更の1ヶ月前までに、利用者にこれを告知します。 \n4.	当社は、当社の都合により、スタッフ等の担当変更をすることがあります。 \n5.	前項の場合、原則として変更が決定した段階で、利用者にこれを告知します。 \n\n第34条 (本約款等の改訂) \n当社は、本約款の改訂を行うことができます。なお、本約款の改訂を実施するときは、予め改訂の１ヶ月前までに告知することにより、改訂した本約款の効力が全利用者に及ぶものとします。 \n\n第35条 （合意管轄） \n本約款に起因又は関連する紛争が生じたときは、東京地方裁判所又は東京簡易裁判所を第一審の専属的合意管轄裁判所とします。  \n\n令和２年６月30日施行\n\n以上\n</string>
    <string name="rules_button">同意する</string>
    <string name="login_title">ログイン</string>
    <string name="login_id_hint">ID</string>
    <string name="login_nickName_hint">お名前</string>
    <string name="title_activity_main_home">MainHomeActivity</string>
    <string name="title_home">ホーム</string>
    <string name="title_dashboard">トレーニング</string>
    <string name="title_notifications">トレーニング記録</string>
    <string name="tab4">カウンセリング</string>
    <string name="tab5">その他</string>
    <string name="toolbar_title_text">佐藤さん、こんにちは！</string>
    <string name="aims_title">目標</string>
    <string name="aims_title_circle">NEW</string>
    <string name="subject_title">課題</string>
    <string name="times_text">次回カウンセリング</string>
    <string name="cardView_information_title">Information お知らせ</string>
    <string name="circle_icon_text">トレーニング</string>
    <string name="circle_icon_text_behind">セラピストから</string>
    <string name="circle_icon_title_behind">タイトルの文章が入ります</string>
    <string name="circle_icon_data_behind">2020.4.20</string>
    <string name="circle_icon_test_behind">体の動きをしっかりと意識して考えながら、行うことが重要です。
ただ体を動かしても、トレーニングの効果は期待できません。一つ一つの動作を、丁寧に考えて動かして行くことで、体と脳のつながりが少しづつ改善されて行くことが期待できます。
また、運動時に深い呼吸を意識して行うことで、より高い効果が得られます。</string>
    <string name="record_text">トレーニング記録</string>
    <string name="record_detail_text">自分の体を良くするためにトレーニングすることは重要です。その上で、生活の中で工夫して後遺症の残る機能を使うことはそれ以上に重要となります。後遺症の残る部位を意識して使うことは、時間がかかったりいらいらする為、避けてしまう方が多いですが、少しでもよいので今練習している動きを意識して日常生活を過ごしてみるように心掛けましょう！\n
 具体的にどうしたらいいの？という方はカウンセリングの際にお聞きください。</string>
    <string name="others_title">その他</string>
    <string name="others_button1">注意事項</string>
    <string name="others_button2">利用規約など</string>
    <string name="others_button4">問い合わせ先</string>
    <string name="statute_label2">プライバシーポリシー</string>
    <string name="statute_content2">このエリアにはプライバシーポリシーに関するテキストが入ります。このエリアにはプライバシーポリシーに関するテキストが入ります。文字サイズが適切かご確認ください。このエリアにはプライバシーポリシーに関するテキストが入ります。このエリアにはプライバシーポリシーに関するテキストが入ります。文字サイズが適切かご確認ください。このエリアにはプライバシーポリシーに関するテキストが入ります。このエリアにはプライバシーポリシーに関するテキストが入ります。文字サイズが適切かご確認ください。このエリアにはプライバシーポリシーに関するテキストが入ります。このエリアにはプライバシーポリシーに関するテキストが入ります。文字サイズが適切かご確認ください。</string>
    <string name="counseling_cancel_message">カウンセリングの予約を\nキャンセルしますか？</string>
    <string name="counseling_cancel_btn_cancel">いいえ</string>
    <string name="counseling_cancel_btn_ok">はい</string>
</resources>