<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/tab1_select"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_dashboard"
        android:icon="@drawable/tab2_select"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_notifications"
        android:icon="@drawable/tab3_select"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_tab4"
        android:icon="@drawable/tab4_select"
        android:title="@string/tab4"/>

    <item
        android:id="@+id/navigation_tab5"
        android:icon="@drawable/tab5_select"
        android:title="@string/tab5"
        />

</menu>
