<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fragment_home_dialog_style">

    <TextView
        android:id="@+id/cancel_message"
        android:layout_width="400dp"
        android:textAlignment="center"
        android:layout_height="wrap_content"
        android:layout_marginTop="125dp"
        android:text="@string/counseling_cancel_message"
        android:textColor="@color/dark_color"
        android:lineSpacingExtra="22sp"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_cancel"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginRight="230dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/dark_button_background"
        android:fontFamily="@font/notosanscjkjp_medium"
        android:text="@string/counseling_cancel_btn_cancel"
        android:textColor="@color/dark_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="@+id/btn_ok"
        app:layout_constraintTop_toTopOf="@+id/meetingMessageView" />

    <Button
        android:id="@+id/btn_ok"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginLeft="230dp"
        android:layout_marginBottom="130dp"
        android:background="@drawable/dark_button_background"
        android:fontFamily="@font/notosanscjkjp_medium"
        android:text="@string/counseling_cancel_btn_ok"
        android:textColor="@color/dark_color"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="@+id/btn_cancel"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/meetingMessageView" />
</androidx.constraintlayout.widget.ConstraintLayout>