<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <FrameLayout
        android:id="@+id/tab5_title_container"
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        tools:ignore="MissingConstraints">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="-5dp"
            android:text="@string/others_title"
            android:fontFamily="@font/notosanscjkjp_bold"
            android:textColor="@color/colorTitle"
            android:textSize="30sp" />

    </FrameLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/color_body">

        <Button
            android:id="@+id/btn1"
            android:layout_width="330dp"
            android:layout_height="200dp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/others_button1"
            android:textColor="@color/button_color"
            android:textSize="30sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/btn2"
            android:layout_width="330dp"
            android:layout_height="200dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/others_button2"
            android:textColor="@color/button_color"
            android:textSize="30sp"
            android:textStyle="bold"
            android:layout_toRightOf="@id/btn1"/>

        <Button
            android:id="@+id/btn3"
            android:layout_width="330dp"
            android:layout_height="200dp"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/button_bg_rounded_corners"
            android:text="@string/others_button4"
            android:textColor="@color/button_color"
            android:textSize="30sp"
            android:textStyle="bold"
          android:layout_toRightOf="@id/btn2" />

        <Button
            android:id="@+id/btn4"
            android:layout_width="330dp"
            android:layout_height="200dp"
            android:background="@drawable/button_darkbg_rounded_corners"
            android:enabled="false"
            android:textColor="@color/button_color"
            android:textSize="30sp"
            android:layout_marginLeft="105dp"
            android:layout_marginTop="40dp"
            android:layout_below="@id/btn1"/>




        <Button
            android:id="@+id/btn5"
            android:layout_width="330dp"
            android:layout_height="200dp"

            android:background="@drawable/button_darkbg_rounded_corners"
            android:enabled="false"
            android:layout_marginLeft="40dp"
            android:layout_marginTop="40dp"
            android:layout_toRightOf="@id/btn4"
            android:layout_below="@id/btn2"/>

        <Button
            android:id="@+id/btn6"
            android:layout_width="330dp"
            android:layout_height="200dp"
            android:layout_marginTop="40dp"
            android:layout_marginRight="60dp"
            android:background="@drawable/button_darkbg_rounded_corners"
            android:enabled="false"
         android:layout_marginLeft="40dp"
            android:layout_toRightOf="@id/btn5"
            android:layout_below="@id/btn3"/>


    </RelativeLayout>







</LinearLayout>