<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true"
        android:orientation="vertical"
        android:scrollbarSize="6dp"
        android:scrollbarThumbVertical="@drawable/scroller_bar"
        android:scrollbars="vertical">

        <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/color_body"
            android:paddingBottom="100dp"
            tools:context=".activity.StatuteActivity">

            <ImageView
                android:id="@+id/back_img"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:src="@mipmap/back"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/statute_label1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:fontFamily="@font/notosanscjkjp_bold"
                android:text="@string/rules_title"
                android:textColor="@color/colorTitle"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@id/statute_content1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="215dp"
                android:layout_marginTop="120dp"
                android:layout_marginRight="215dp"
                android:fontFamily="@font/notosanscjkjp_regular"
                android:lineHeight="25sp"
                android:text="@string/rules_text"
                android:textColor="@color/color_body2"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/statute_label2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp"
                android:fontFamily="@font/notosanscjkjp_bold"
                android:text="@string/statute_label2"
                android:textColor="@color/colorTitle"
                android:textSize="30sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statute_content1" />

            <TextView
                android:id="@+id/statute_content2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="215dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="215dp"
                android:fontFamily="@font/notosanscjkjp_regular"
                android:lineHeight="25sp"
                android:text="@string/statute_content2"
                android:textColor="@color/color_body2"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/statute_label2" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

    <View
        android:layout_width="match_parent"
        android:layout_height="7dp"
        android:layout_alignParentBottom="true"
        android:background="@drawable/gradient_bar" />
</RelativeLayout>

